--- a/saitae-web/src/main/webapp/pages/repCitas.xhtml
+++ b/saitae-web/src/main/webapp/pages/repCitas.xhtml
@@ -1,10 +1,67 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="./../WEB-INF/template/plantilla1.xhtml">
+                template="./../WEB-INF/template/plantilla.xhtml"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
+                xmlns="http://www.w3.org/1999/xhtml">
 
     <ui:define name="content">
-        Reporte de citas psicológicas [En Construcción]
-    </ui:define>
+        <h:form id="form">
+            <h:panelGrid columns="1">
+                <h1 align="center">Reporte de citas psicológicas</h1>
+                <h:panelGrid columns="2">
+                    <p:outputLabel for="gr" value="Fechas del reporte : "/>
+                    <p:selectOneMenu id="gr" value="#{repCitasController.periodoSel}"
+                                     converter="omnifaces.SelectItemsConverter">
+                        <f:selectItem itemValue="#{null}" itemLabel="Seleccione" noSelectionOption="true"/>
+                        <f:selectItems value="#{repCitasController.periodos}" var="ps" 
+                                       itemValue="#{ps}" itemLabel="#{repPSController.getFechasPeriodo(ps)}"/>
+                        <p:ajax event="itemSelect" listener="#{repCitasController.onPeriodoSelected}" 
+                                update=":form"/>
+                    </p:selectOneMenu>
+                </h:panelGrid>
+                <p:dataTable id="inv" value="#{repCitasController.reportes}" var="rp"
+                             emptyMessage="Sin registros" stickyHeader="true" 
+                             rendered="#{repCitasController.reportes.size()>0}">
+                    <f:facet name="header">
+                        <h:outputText value="Reporte de citas atendidas #{repPSController.getFechasPeriodo(rp)}"/>
+                    </f:facet>
+                    <p:column headerText="Alumno">
+                        #{repPSController.getNombreCortoPersona(rp.estudiante1.persona)}
+                    </p:column>
+                    <p:column headerText="Grado">
+                        #{repPSController.getGradoEstudiante(rp.estudiante1)}
+                    </p:column>
+                    <p:column headerText="Citas Solicitadas">
+                        #{rp.NCitasSolicitadas}
+                    </p:column>
+                    <p:column headerText="Consultas Realizadas">
+                        #{rp.NConsultas}
+                    </p:column>
+                    <p:column headerText="Motivos de las Consultas">
+                        #{rp.motivos}
+                    </p:column>
+                    <p:column headerText="Psicólogo">
+                        #{repPSController.getNombreCortoPersona(rp.psicologo)}
+                    </p:column>
+                    <p:column headerText="Comentarios del Psicólogo">
+                        <p:inputTextarea value="#{rp.diagnostico}" 
+                                         rows="6" 
+                                         disabled="true" maxlength="800"/>
+                    </p:column>
+                </p:dataTable>
+                <!--<h:commandLink rendered="# {repInvController.verInvBiblio}">
+                    <p:graphicImage library="img" name="xls.png" width="37px" height="32px"/>
+                    <p:dataExporter type="xls" target="inv" 
+                                    options="# {axiliarController.excelOpt}"
+                                    fileName="Inventario_# {repInvController.trSelected.tipoRecursoNombre}_#{repInvController.añoActual}"
+                                    encoding="UTF-8"
+                                    postProcessor="# {repInvController.reporte}"/>
+                </h:commandLink>-->
 
+            </h:panelGrid>
+        </h:form>
+    </ui:define>
 </ui:composition>
